--- a/styles/board.css
+++ b/styles/board.css
@@ -223,7 +223,7 @@ button img {
   font-size: 12px;
   font-weight: bold;
   width: fit-content;
-}
+} 
 
 .category-bug-fix {
   background: #D1D1D1;
@@ -247,22 +247,26 @@ button img {
 }
 
 .task-description {
-  height: 38px;
+  max-height: 38px;
   font-size: 16px;
   color: #A8A8A8;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: break-spaces;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
 }
 
 .task-progress {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 8px;
 }
 
 .task-progress span {
   font-size: var(--FS-S);
+  white-space: nowrap;
 }
 
 .progress-bar {
@@ -384,6 +388,7 @@ button img {
 
 #addTaskOverlay #addTaskAssignedToList {
   margin-left: 10px;
+  z-index: 3;
 }
 
 #addTaskOverlay #addTaskDropdownCategories {
